--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "34fbe6d6",
    "metadata": {},
    "outputs": [
@@ -25,34 +25,27 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "# Import custom modules\n",
     "import feature_extraction as fe\n",
-    "import models\n",
-    "import evaluation as ev\n",
     "import augmentation as aug\n",
     "\n",
-    "# Set random seeds for reproducibility\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
     "\n",
-    "# Display TensorFlow version\n",
     "print(f\"TensorFlow version: {tf.__version__}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "486c2584",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Data Configuration\n",
-    "# ====================\n",
     "\n",
-    "# Define paths\n",
-    "video_path = 'data/videos'  # Path to the video dataset\n",
+    "video_path = 'data/videos' \n",
     "models_path = 'models' \n",
-    "# Define the sign language words/gestures to recognize\n",
+    "\n",
     "WORDS = os.listdir(video_path)\n",
     "num_classes = len(WORDS)"
    ]
@@ -120,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "eda7b9e6",
    "metadata": {},
    "outputs": [
@@ -136,28 +129,8 @@
    ],
    "source": [
     "# 2. Data Loading and Preprocessing\n",
-    "# ================================\n",
     "\n",
     "print(\"Step 1: Loading and preprocessing video data...\")\n",
-    "\n",
-    "# Check if processed data already exists\n",
-    "# import pickle\n",
-    "# data_file = 'data/processed_data.pkl'\n",
-    "\n",
-    "# if os.path.exists(data_file):\n",
-    "#     print(\"Loading preprocessed data from file...\")\n",
-    "#     with open(data_file, 'rb') as f:\n",
-    "#         data = pickle.load(f)\n",
-    "#     X_raw, y = data['X_raw'], data['y']\n",
-    "# else:\n",
-    "#     print(\"Processing video data...\")\n",
-    "#     # Process all videos\n",
-    "#     X_raw, y = dp.process_all_videos(video_path, words, sequence_length)\n",
-    "    \n",
-    "#     # Save processed data\n",
-    "#     os.makedirs('data', exist_ok=True)\n",
-    "#     with open(data_file, 'wb') as f:\n",
-    "#         pickle.dump({'X_raw': X_raw, 'y': y}, f)\n",
     "\n",
     "X_raw = np.load('data/X_raw.npy')\n",
     "y = np.load('data/y.npy')\n",
@@ -198,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2d049080",
    "metadata": {},
    "outputs": [
@@ -226,7 +199,6 @@
    ],
    "source": [
     "# 3. Data Augmentation\n",
-    "# ===================\n",
     "\n",
     "print(\"Step 2: Augmenting the dataset...\")\n",
     "\n",
